# a_start_demo

./: CMakeLists.txt  CMakePresets.json  README.md
include/: astar.h  demo.h  win32_platform.h
src/: astar.cpp  demo.cpp  win32_platform.cpp
